protected rutes & login strcuture

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,3 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.title {
+    @apply font-custom_Syne font-bold md:text-[48px] text-[30px] text-[#1f1f1f]
+}
