bug fixed, initiativeForm

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,11 +9,16 @@
       @apply font-custom_Syne font-bold md:text-[48px] text-[30px] text-[#1f1f1f];
     }
     
+    
 }
 
 .initiativeButton {
-  @apply bg-[#2D3648] text-white text-lg font-custom_Syne font-bold justify-start border-black border-2 rounded-md text-left p-6;
+  @apply w-full bg-[#2D3648] text-white text-lg font-custom_Syne font-bold justify-start border-black border-2 rounded-md text-left p-6;
 }
 .initiativeContainer {
-  @apply  bg-slate-100 rounded-sm pb-4;
+  @apply  bg-slate-100 rounded-sm py-4;
+}
+
+.boton{
+  @apply border-2 border-black rounded-md hover:shadow-xl px-14 py-2 font-custom_Syne font-bold
 }
